crates/cubecl-core/tests/error/range.rs
use cubecl_core as cubecl;
use cubecl::prelude::*;

#[cube]
fn range() {
    0..10;
}

fn main() {}
