crates/cubecl-core/tests/error/range.stderr
error: Range is not supported, use [range](cubecl::prelude::range) instead.
 --> tests/error/range.rs:6:5
  |
6 |     0..10;
  |     ^^^^^
